arc: Fix assistant activation logic.

This CL fixes following issues:
Assistant has dependencies on ARC and it has to count them when
checked for activation. This uses default helper
IsArcTermsOfServiceOobeNegotiationNeeded to determine that ARC
is not Opted-In.
This also changes direct prefs::kArcEnabled manipulation to helper
SetArcPlayStoreEnabledForProfile that has logic to start arc session
when needed besides only setting that flag.

Test: Manually
Bug: 831302
Change-Id: I48ce9400d668052bff7691deed42b7bdeb777827
Reviewed-on: https://chromium-review.googlesource.com/1019348
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Yury Khmel <khmel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552062}
Former-commit-id: 122eb4f7a87f28eb1f8c81d3318a3a07a265f721